# mesa

src/gallium/targets/dri/: meson.build
src/gallium/targets/va/: meson.build
src/gallium/targets/vdpau/: meson.build
